# aggregation-mongo-bot

./: .coveragerc  .gitignore  README.md  pyproject.toml
src/: config.py  db.py  main.py  utils.py
src/abstracts/: abstract_aggregator_repo.py  abstract_get_aggregated_data.py
src/repos/: aggregator_repo.py
src/routers/: default_router.py
src/services/: get_aggregated_data.py
src/values/: date_format.py  input_message.py  payments_dto.py
tests/: conftest.py  test_aggregation.py  test_get_aggregated_data.py
